force-app/main/default/objects/LT_Expense__c/LT_Expense__c.object-meta.xml
<CustomObject>
    <description>Despesa - LogiTrack Operations 360.</description>
    <label>Despesa</label>
    <nameField>
        <displayFormat>DES-{000000}</displayFormat>
        <label>Codigo da Despesa</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Despesas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>