force-app/main/default/objects/LT_Expense__c/fields/LT_Base__c.field-meta.xml
<CustomField>
    <fullName>LT_Base__c</fullName>
    <description>Base ou unidade que incorreu na despesa.</description>
    <label>Base / Unidade</label>
    <referenceTo>LT_Logistics_Unit__c</referenceTo>
    <relationshipLabel>Despesas</relationshipLabel>
    <relationshipName>LT_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>