force-app/main/default/objects/LT_Expense__c/fields/LT_Competency_Month__c.field-meta.xml
<CustomField>
    <fullName>LT_Competency_Month__c</fullName>
    <description>Mes contabil no formato AAAA-MM.</description>
    <inlineHelpText>Use o formato AAAA-MM, por exemplo 2026-08.</inlineHelpText>
    <label>Mes de Competencia</label>
    <required>true</required>
    <type>Text</type>
    <length>7</length>
</CustomField>