force-app/main/default/objects/LT_Expense__c/fields/LT_Description__c.field-meta.xml
<CustomField>
    <fullName>LT_Description__c</fullName>
    <description>Detalhamento da despesa.</description>
    <label>Descricao</label>
    <type>LongTextArea</type>
    <length>8000</length>
</CustomField>