force-app/main/default/objects/LT_Expense__c/fields/LT_Expense_Category__c.field-meta.xml
<CustomField>
    <fullName>LT_Expense_Category__c</fullName>
    <description>Natureza contabil da despesa.</description>
    <label>Categoria da Despesa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Combustivel</fullName>
            </value>
            <value>
                <fullName>Manutencao de Veiculos</fullName>
            </value>
            <value>
                <fullName>Aluguel de Base/Galpao</fullName>
            </value>
            <value>
                <fullName>Energia / Agua / Internet</fullName>
            </value>
            <value>
                <fullName>Material de Embalagem</fullName>
            </value>
            <value>
                <fullName>Equipamentos / EPI</fullName>
            </value>
            <value>
                <fullName>Folha / Encargos</fullName>
            </value>
            <value>
                <fullName>Frete / Transferencia (SC/MR)</fullName>
            </value>
            <value>
                <fullName>Ressarcimento a Embarcador</fullName>
            </value>
            <value>
                <fullName>Penalizacao / Multa</fullName>
            </value>
            <value>
                <fullName>Viagem / Diaria</fullName>
            </value>
            <value>
                <fullName>Servicos de Terceiros</fullName>
            </value>
            <value>
                <fullName>Outras Despesas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>