force-app/main/default/objects/LT_Expense__c/fields/LT_Expense_Date__c.field-meta.xml
<CustomField>
    <fullName>LT_Expense_Date__c</fullName>
    <description>Data de realizacao da despesa.</description>
    <label>Data da Despesa</label>
    <required>true</required>
    <type>Date</type>
</CustomField>