force-app/main/default/objects/LT_Expense__c/fields/LT_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>LT_Invoice_Number__c</fullName>
    <description>Numero da nota fiscal.</description>
    <label>Nota Fiscal</label>
    <type>Text</type>
    <length>40</length>
</CustomField>