force-app/main/default/objects/LT_Expense__c/fields/LT_Is_Paid__c.field-meta.xml
<CustomField>
    <fullName>LT_Is_Paid__c</fullName>
    <description>Verdadeiro quando a despesa ja foi paga.</description>
    <label>Paga</label>
    <formula>ISPICKVAL(LT_Status__c, "Paga")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Checkbox</type>
</CustomField>