force-app/main/default/objects/LT_Expense__c/fields/LT_Pass_Through__c.field-meta.xml
<CustomField>
    <fullName>LT_Pass_Through__c</fullName>
    <description>Despesa que e apenas repasse de valores a motoristas (frete de ultima milha).</description>
    <label>Repasse a Motorista</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>