force-app/main/default/objects/LT_Expense__c/fields/LT_Payment_Request__c.field-meta.xml
<CustomField>
    <fullName>LT_Payment_Request__c</fullName>
    <description>Solicitacao de pagamento que cobre esta despesa.</description>
    <label>Solicitacao de Pagamento</label>
    <referenceTo>LT_Payment_Request__c</referenceTo>
    <relationshipLabel>Despesas</relationshipLabel>
    <relationshipName>LT_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>