force-app/main/default/objects/LT_Expense__c/fields/LT_Recurring__c.field-meta.xml
<CustomField>
    <fullName>LT_Recurring__c</fullName>
    <description>Despesa que se repete todo mes.</description>
    <label>Recorrente</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>