force-app/main/default/objects/LT_Expense__c/fields/LT_Status__c.field-meta.xml
<CustomField>
    <fullName>LT_Status__c</fullName>
    <description>Situacao da despesa no periodo.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prevista</fullName>
                <default>true</default>
                <label>Prevista</label>
            </value>
            <value>
                <fullName>Realizada</fullName>
            </value>
            <value>
                <fullName>Paga</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>