force-app/main/default/objects/LT_Expense__c/fields/LT_Supplier__c.field-meta.xml
<CustomField>
    <fullName>LT_Supplier__c</fullName>
    <description>Fornecedor ou prestador da despesa.</description>
    <label>Fornecedor</label>
    <type>Text</type>
    <length>120</length>
</CustomField>