force-app/main/default/objects/LT_Expense__c/validationRules/LT_EXP_Amount_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_EXP_Amount_Positive</fullName>
    <active>true</active>
    <description>O valor da despesa deve ser maior que zero.</description>
    <errorConditionFormula>BLANKVALUE(LT_Amount__c, 0) &lt;= 0</errorConditionFormula>
    <errorDisplayField>LT_Amount__c</errorDisplayField>
    <errorMessage>Informe um valor de despesa maior que zero.</errorMessage>
</ValidationRule>