force-app/main/default/objects/LT_Expense__c/validationRules/LT_EXP_Competency_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_EXP_Competency_Format</fullName>
    <active>true</active>
    <description>O mes de competencia deve estar no formato AAAA-MM.</description>
    <errorConditionFormula>NOT(REGEX(LT_Competency_Month__c, "[0-9]{4}-(0[1-9]|1[0-2])"))</errorConditionFormula>
    <errorDisplayField>LT_Competency_Month__c</errorDisplayField>
    <errorMessage>Use o formato AAAA-MM no mes de competencia (ex.: 2026-08).</errorMessage>
</ValidationRule>