force-app/main/default/objects/LT_Expense__c/validationRules/LT_EXP_Paid_Requires_Support.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_EXP_Paid_Requires_Support</fullName>
    <active>true</active>
    <description>Despesa paga exige nota fiscal ou solicitacao de pagamento.</description>
    <errorConditionFormula>AND(ISPICKVAL(LT_Status__c, "Paga"), ISBLANK(LT_Invoice_Number__c), ISBLANK(LT_Payment_Request__c))</errorConditionFormula>
    <errorDisplayField>LT_Status__c</errorDisplayField>
    <errorMessage>Vincule uma nota fiscal ou uma solicitacao de pagamento para marcar a despesa como paga.</errorMessage>
</ValidationRule>