force-app/main/default/objects/LT_Expense__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LT_Expense_Category__c</columns>
    <columns>LT_Amount__c</columns>
    <columns>LT_Status__c</columns>
    <columns>LT_Cost_Center__c</columns>
    <columns>LT_Competency_Month__c</columns>
    <columns>LT_Expense_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas</label>
</ListView>