force-app/main/default/objects/LT_Expense__c/listViews/Por_Base.listView-meta.xml
<ListView>
    <fullName>Por_Base</fullName>
    <columns>NAME</columns>
    <columns>LT_Base__c</columns>
    <columns>LT_Expense_Category__c</columns>
    <columns>LT_Amount__c</columns>
    <columns>LT_Status__c</columns>
    <columns>LT_Competency_Month__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LT_Base__c</field>
        <operation>notEqual</operation>
        <value></value>
    </filters>
    <label>Com Base Definida</label>
</ListView>