force-app/main/default/objects/LT_Expense__c/listViews/Previstas.listView-meta.xml
<ListView>
    <fullName>Previstas</fullName>
    <columns>NAME</columns>
    <columns>LT_Expense_Category__c</columns>
    <columns>LT_Amount__c</columns>
    <columns>LT_Cost_Center__c</columns>
    <columns>LT_Expense_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LT_Status__c</field>
        <operation>equals</operation>
        <value>Prevista</value>
    </filters>
    <label>Previstas</label>
</ListView>